# algoticks

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  benchmark.json  config.json  settings.json
assets/: config.json  example.csv  example_DOHLC.csv  example_OCDHL.csv  example_ODHLC.csv  gen_build_linux.py  gen_build_windows.py
assets/configs/linux/: benchmark.json  config.json
assets/configs/windows/: benchmark.json  config.json  settings.json
example_configs/: benchmark.json  config.json
include/: algorithms.h  benchmark.h  callbacks.h  csvutils.h  dashboard.h  debug.h  dtypes.h  misc.h  parser.h  sim.h  sim_derivative.h  timeutils.h
src/: benchmark.c  callbacks.c  csvutils.c  dashboard.c  debug.c  main.c  misc.c  parser.c  sim.c  sim_derivative.c  timeutils.c
src/algorithms/: 3Greens.c  3Reds.c  AbandonedBaby.c  EveningStar.c  Greens.c  Reds.c  ThreeBlackCrows.c  ThreeLineStrike.c  TwoBlackGapping.c
src/callbacks/: log.c
tests/: AAPL.csv  CMakeLists.txt  algoticks_tests.c  example_OCDHL.csv  example_ODHLC.csv  stream_to_csv.py  stream_to_socket.py
